--- a/index.html
+++ b/index.html
@@ -7,8 +7,29 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="container">
-      <div class="box">center this div</div>
-    </div>
-  </body>
+  <nav>
+    <ul>
+        <li>
+            <a href="">One</a>
+        </li>
+        <li>
+            <a href="">Two</a>
+        </li>
+        <li>
+            <a href="">Three</a>
+        </li>
+    </ul>
+    <div>Logo</div>
+    <ul>
+        <li>
+            <a href="">Four</a>
+        </li>
+        <li>
+            <a href="">Five</a>
+        </li>
+        <li>
+            <a href="">Six</a>
+        </li>
+    </ul>
+  </nav>
 </html>
