--- a/index.html
+++ b/index.html
@@ -4,32 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flex Header 2</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  <nav>
-    <ul>
-        <li>
-            <a href="">One</a>
-        </li>
-        <li>
-            <a href="">Two</a>
-        </li>
-        <li>
-            <a href="">Three</a>
-        </li>
-    </ul>
-    <div>Logo</div>
-    <ul>
-        <li>
-            <a href="">Four</a>
-        </li>
-        <li>
-            <a href="">Five</a>
-        </li>
-        <li>
-            <a href="">Six</a>
-        </li>
-    </ul>
-  </nav>
+    <div class="header">
+      <div class="logo">
+        LOGO
+      </div>
+      <ul class="links">
+        <li><a href="google.com">link-one</a></li>
+        <li><a href="google.com">link-two</a></li>
+        <li><a href="google.com">link-three</a></li>
+      </ul>
+      <button class="notifications">
+        1 new notification
+      </button>
+      <div class="profile-image"></div>
+    </div>
+  </body>
 </html>
