--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
   </head>
   <body>
     <div class="header">
-      <div class="logo">
-        LOGO
-      </div>
-      <ul class="links">
-        <li><a href="google.com">link-one</a></li>
-        <li><a href="google.com">link-two</a></li>
-        <li><a href="google.com">link-three</a></li>
-      </ul>
-      <button class="notifications">
-        1 new notification
-      </button>
-      <div class="profile-image"></div>
+     <div class="split">
+         <div class="logo">
+            LOGO
+        </div>
+            <nav class="links">
+                 <a href="google.com">link-one</a>
+                 <a href="google.com">link-two</a>
+                <a href="google.com">link-three</a>
+            </nav>
+            </div>
+
+            <div class="split2">
+                <button class="notifications">
+                1 new notification
+                </button>
+                <div class="profile-image"></div>
     </div>
   </body>
 </html>
