--- a/index.html
+++ b/index.html
@@ -4,27 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flex Header 2</title>
+    <title>Information</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="header">
-     <div class="split">
-         <div class="logo">
-            LOGO
-        </div>
-            <nav class="links">
-                 <a href="google.com">link-one</a>
-                 <a href="google.com">link-two</a>
-                <a href="google.com">link-three</a>
-            </nav>
-            </div>
+    <header>
+        <div class="title">Information!</div>
+    </header>
 
-            <div class="split2">
-                <button class="notifications">
-                1 new notification
-                </button>
-                <div class="profile-image"></div>
+
+<div class="container">
+    <div class="cards">
+        <div class="card-image">
+            <img src="./images/barberry.png" alt="barberry">
+        </div>
+        <p>This is a type of plant. We love this one.</p>
+    </div>
+    <div class="cards">
+        <div class="card-image">
+            <img src="./images/chilli.png" alt="barberry">
+        </div>
+        <p>This is another type of plant. Isn't it nice?</p>
+    </div>
+    <div class="cards">
+        <div class="card-image">
+            <img src="./images/pepper.png" alt="barberry">
+        </div>
+        <p>We have so many plants. Yay plants.</p>
+    </div>
+    <div class="cards">
+        <div class="card-image">
+            <img src="./images/saffron.png" alt="barberry">
+        </div>
+        <p>I'm running out of things to say about plants.</p>
+    </div>
+</div>
+    <!-- disregard this section, it's here to give attribution to the creator of these icons -->
+    <div class="footer">
+      <div>Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
     </div>
   </body>
 </html>
+Footer
