--- a/index.html
+++ b/index.html
@@ -1,48 +1,26 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Information</title>
     <link rel="stylesheet" href="style.css">
+    <title>Modal</title>
   </head>
   <body>
-    <header>
-        <div class="title">Information!</div>
-    </header>
-
-
-<div class="container">
-    <div class="cards">
-        <div class="card-image">
-            <img src="./images/barberry.png" alt="barberry">
+    <div class="modal">
+            <div class="icon">!</div>
+            <div class="close-button">✖</div>
+        <div class="textbox">
+            <div class="header">Are you sure you want to do that?</div>
+            <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
         </div>
-        <p>This is a type of plant. We love this one.</p>
-    </div>
-    <div class="cards">
-        <div class="card-image">
-            <img src="./images/chilli.png" alt="barberry">
-        </div>
-        <p>This is another type of plant. Isn't it nice?</p>
-    </div>
-    <div class="cards">
-        <div class="card-image">
-            <img src="./images/pepper.png" alt="barberry">
-        </div>
-        <p>We have so many plants. Yay plants.</p>
-    </div>
-    <div class="cards">
-        <div class="card-image">
-            <img src="./images/saffron.png" alt="barberry">
-        </div>
-        <p>I'm running out of things to say about plants.</p>
-    </div>
+<div class="btnbox">
+    <button class="continue">Continue</button>
+    <button class="cancel">Cancel</button>
 </div>
-    <!-- disregard this section, it's here to give attribution to the creator of these icons -->
-    <div class="footer">
-      <div>Icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+  
     </div>
   </body>
 </html>
-Footer
