--- a/index.html
+++ b/index.html
@@ -1,26 +1,45 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Modal</title>
+    <title>LAYOUT</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <div class="modal">
-            <div class="icon">!</div>
-            <div class="close-button">✖</div>
-        <div class="textbox">
-            <div class="header">Are you sure you want to do that?</div>
-            <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
-        </div>
-<div class="btnbox">
-    <button class="continue">Continue</button>
-    <button class="cancel">Cancel</button>
-</div>
-  
+    <div class="header">
+      <ul class="left-links">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Store</a></li>
+      </ul>
+      <ul class="right-links">
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">Settings</a></li>
+      </ul>
+    </div>
+
+    <div class="content">
+      <img src="images/logo.png" alt="Project logo. Represents odin with the project name.">
+    
+    </div>
+    <div class="input">
+        <input type="text">
+      </div>
+    <div class="buttons">
+        <button>Do the thing!</button>
+        <button>Do the other thing!</button>
+      </div>
+    </div>
+    <div class="footer">
+      <ul class="left-links">
+        <li><a href="#">Advertising</a></li>
+        <li><a href="#">Business</a></li>
+      </ul>
+      <ul class="right-links">
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+      </ul>
     </div>
   </body>
 </html>
