--- a/index.html
+++ b/index.html
@@ -4,42 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LAYOUT</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>The Holy Grail</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="header">
-      <ul class="left-links">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Store</a></li>
-      </ul>
-      <ul class="right-links">
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Settings</a></li>
+      MY AWESOME WEBSITE
+    </div>
+    <div>
+
+
+    <div class="sidebar">
+      <ul>
+        <li><a href="#">⭐ - link one</a></li>
+        <li><a href="#">🦸🏽‍♂️ - link two</a></li>
+        <li><a href="#">🖌️ - link three</a></li>
+        <li><a href="#">👌🏽 - link four</a></li>
       </ul>
     </div>
 
-    <div class="content">
-      <img src="images/logo.png" alt="Project logo. Represents odin with the project name.">
-    
-    </div>
-    <div class="input">
-        <input type="text">
-      </div>
-    <div class="buttons">
-        <button>Do the thing!</button>
-        <button>Do the other thing!</button>
-      </div>
+     <div class="cardbox">
+    <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet? Dolorem dignissimos maiores non delectus possimus dolor nulla repudiandae vitae provident quae, obcaecati ipsam unde impedit corrupti veritatis minima porro?</div>
+    <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi quaerat qui iure ipsam maiores velit tempora, deleniti nesciunt fuga suscipit alias vero rem, corporis officia totam saepe excepturi odit ea.</div>
+    <div class="card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis illo ex quas, commodi eligendi aliquam ut, dolor, atque aliquid iure nulla. Laudantium optio accusantium quaerat fugiat, natus officia esse autem?</div>
+    <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nihil impedit eius amet adipisci dolorum vel nostrum sit excepturi corporis tenetur cum, dolore incidunt blanditiis. Unde earum minima laboriosam eos!</div>
+    <div class="card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis illo ex quas, commodi eligendi aliquam ut, dolor, atque aliquid iure nulla. Laudantium optio accusantium quaerat fugiat, natus officia esse autem?</div>
+    <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nihil impedit eius amet adipisci dolorum vel nostrum sit excepturi corporis tenetur cum, dolore incidunt blanditiis. Unde earum minima laboriosam eos!</div>
+     </div>
     </div>
     <div class="footer">
-      <ul class="left-links">
-        <li><a href="#">Advertising</a></li>
-        <li><a href="#">Business</a></li>
-      </ul>
-      <ul class="right-links">
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Terms</a></li>
-      </ul>
+      The Odin Project ❤️
     </div>
   </body>
 </html>
